tests/baselines/reference/unusedDestructuringParameters.errors.txt
unusedDestructuringParameters.ts(1,12): error TS6133: 'a' is declared but its value is never read.
unusedDestructuringParameters.ts(3,13): error TS6133: 'a' is declared but its value is never read.


==== unusedDestructuringParameters.ts (2 errors) ====
    const f = ([a]) => { };
               ~~~
!!! error TS6133: 'a' is declared but its value is never read.
    f([1]);
    const f2 = ({a}) => { };
                ~~~
!!! error TS6133: 'a' is declared but its value is never read.
    f2({ a: 10 });
    const f3 = ([_]) => { };
    f3([10]);